[workspace]
members = ["ph", "csf", "cseq", "minimum_redundancy", "dyn_size_of", "fsum", "bitm", "binout", "butils",
           "mphf_benchmark", "csf_benchmark", "cseq_benchmark", "coding_benchmark"]
resolver = "2"

[patch.crates-io]
dyn_size_of = { version=">=0.1", path="dyn_size_of" }

[profile.release]
lto = true
codegen-units = 1