[package]
name = "bitm"
version = "0.3.1"
edition = "2021"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
license = "MIT OR Apache-2.0"
description = "The library for bit and bitmap (bit vector) manipulation."
documentation = "https://docs.rs/bitm"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "algorithms", "data-structures", "science", "encoding" ]
keywords = [ "bit", "bitmap", "rank", "bitvector", "bitset" ]

[dependencies]
dyn_size_of = { version="0.4", path="../dyn_size_of" }

[dev-dependencies]
criterion = "0.4"
iai-callgrind = "0.9"


[[bench]]
name = "bitvec"
harness = false

[[bench]]
name = "rank_select"
harness = false

[[bench]]
name = "bitvec-iai"
harness = false

#[profile.bench]
#debug = true
