[package]
name = "butils"
version = "0.1.0"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utilities shared by software included in BSuccinct."
documentation = "https://docs.rs/butils"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "science" ]
keywords = [ "random", "xorshift" ]
