[package]
name = "coding_benchmark"
version = "0.1.1"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The program for benchmarking Huffman coding algorithms"
documentation = "https://docs.rs/coding_benchmark"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "compression", "algorithms", "data-structures", "encoding", "science" ]
keywords = [ "compression", "decompression", "huffman", "huffman_coding", "benchmark" ]

[dependencies]
clap = { version="4", features = ["derive"] }
rand = "0.8"
rand_pcg = "0.3"
butils = { version="0.1", path="../butils" }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
minimum_redundancy = { version="0.3", path="../minimum_redundancy" }
huffman-compress = "0.6.1"
bitm = { version="0.4", path="../bitm" }
bit-vec = "0.6"
constriction = "0.3"