[package]
name = "cseq"
version = "0.1.2"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library of compact sequences."
documentation = "https://docs.rs/cseq"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "compression", "sequence", "succinct", "elias-fano", "wavelet-matrix" ]

[dependencies]
bitm = { version="0.4", path="../bitm" }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
binout = { version="0.3", path="../binout" }