[package]
name = "cseq_benchmark"
version = "0.0.2"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The program for benchmarking compact sequences and bitmaps"
documentation = "https://docs.rs/cseq_benchmark"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "compression", "sequence", "succinct", "elias-fano", "benchmark" ]

[dependencies]
butils = { version="0.0", path="../butils" }
clap = { version="4", features = ["derive"] }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
cseq = { version ="0.1", path = "../cseq" }
bitm = { version="0.3", path="../bitm" }
sucds = "0.8"