[package]
name = "cseq_benchmark"
version = "0.1.3"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The program for benchmarking compact sequences and bitmaps"
documentation = "https://docs.rs/cseq_benchmark"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "compression", "sequence", "succinct", "elias-fano", "benchmark" ]

[dependencies]
butils = { version="0.1", path="../butils" }
clap = { version="4", features = ["derive"] }
dyn_size_of = { version=">=0.4.3", path="../dyn_size_of", features=["aligned-vec"] }
cseq = { version ="0.1", path = "../cseq" }
bitm = { version="0.4", path="../bitm", features=["aligned-vec"] }
aligned-vec = "0.6"
vers-vecs = { version="1.1", optional=true }

[target.'cfg(target_pointer_width = "64")'.dependencies]
sucds = "0.8"
succinct = "0.5"
sux="0.5"
mem_dbg = "0.2" # required by sux MemSize