[package]
name = "csf"
version = "0.1.14"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library of compressed static functions (maps) that use perfect hashing and value compression."
documentation = "https://docs.rs/csf"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "perfect", "hashing", "mphf", "map", "dictionary" ]

[dependencies]
bitm = { version="0.4", path="../bitm" }
ph = { version="0.8", path="../ph", features = ["wyhash"] }
minimum_redundancy = { version="0.3", path="../minimum_redundancy" }
binout = { version="0.2", path="../binout" }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
fsum = { version="0.1", path="../fsum" }

[dev-dependencies]
maplit = "1.*"
