[package]
name = "dyn_size_of"
version = "0.2.2"
edition = "2018"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
license = "MIT OR Apache-2.0"
description = "The library to report approximate amount of memory consumed by variables, including the memory allocated on heap."
documentation = "https://docs.rs/dyn_size_of"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "science" ]
keywords = [ "memory", "complexity", "heap" ]

