[package]
name = "minimum_redundancy"
version = "0.2.2"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library to encode and decode data with binary or non-binary Huffman coding."
documentation = "https://docs.rs/minimum_redundancy"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "compression", "algorithms", "data-structures", "encoding", "science" ]
keywords = [ "compression", "decompression", "huffman", "huffman_coding", "canonical" ]

[dependencies]
dyn_size_of = { version=">=0.1", path="../dyn_size_of" }
binout = { version=">=0.2", path="../binout" }
fsum = { version="0.1", path="../fsum" }
co_sort = "0.2.*"

[dev-dependencies]
maplit = "1.*"
