[package]
name = "mphf_benchmark"
version = "0.3.5"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
license = "MIT OR Apache-2.0"
description = "The program for benchmarking Minimal Perfect Hash Functions"
edition = "2021"
documentation = "https://docs.rs/mphf_benchmark"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "perfect", "hashing", "minimal", "mphf" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitm = { version="0.5", path="../bitm" }
butils = { version="0.1", path="../butils" }
rayon = "1.5"
dyn_size_of = { version="0.4", path="../dyn_size_of" }
cpu-time = "1"
ph = { version="0.9", path="../ph" }
cmph-sys = { version=">=0.1", git = "https://github.com/beling/cmph-sys", optional = true }
boomphf = { package = "boomphf-patched", version="0.5.9-0", git = "https://github.com/beling/rust-boomphf", optional = true }
ptr_hash = { version="1.1", optional = true }
cacheline-ef = { version = "1.1", optional = true }
mem_dbg = "0.3"
clap = { version="4.0", features = ["derive"] }
fxhash = "0.2"
seedable_hash = { version="0.2", path="../seedable_hash", default-features = false }

[features]
default = ["sux", "wyhash", "ptr_hash"]
fmph = []   # Allow testing FMPH and FMPHGO
fmph-key-access = ["fmph"]    # Allows a choice of multiple methods of accessing keys by FMPH(GO).
gxhash = ["ph/gxhash"]
rapidhash = ["ph/rapidhash"]
wyhash = ["ph/wyhash"]
xxhash-rust = ["ph/xxhash-rust"]
sip13 = ["ph/sip13"]  # if enabled, makes available BuildSip13 that uses Sip13 from compiler internals
fnv = ["ph/fnv"]
sux = ["ph/sux"]
ptr_hash = ['dep:cacheline-ef', 'dep:ptr_hash']
cacheline-ef = ["ph/cacheline-ef"]

#[profile.release]
#lto = true
#codegen-units = 1