[package]
name = "ph"
version = "0.8.1"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library of data structures based on perfect hashing."
documentation = "https://docs.rs/ph"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "perfect", "hashing", "mphf", "map", "dictionary" ]

[features]
default = ["wyhash"]
sip13 = []  # if enabled, makes available BuildSip13 that uses Sip13 from compilter internals

[dependencies]
bitm = { version="0.2", path="../bitm" }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
binout = { version="0.2", path="../binout" }
rayon = "1.5"
wyhash = { version="0.5", optional=true }
#wyhash_git = { git = "https://github.com/eldruin/wyhash-rs", package = "wyhash", optional=true }    # does not work
fnv = { version="1", optional=true }

