[package]
name = "ph"
version = "0.8.5"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library of data structures based on perfect hashing."
documentation = "https://docs.rs/ph"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "data-structures", "algorithms", "compression", "science" ]
keywords = [ "perfect", "hashing", "mphf", "map", "dictionary" ]

[features]
default = ["aligned-vec", "wyhash"]
gxhash = ["seedable_hash/gxhash"]
rapidhash = ["seedable_hash/rapidhash"]
wyhash = ["seedable_hash/wyhash"]
sip13 = ["seedable_hash/sip13"]  # if enabled, makes available BuildSip13 that uses Sip13 from compilter internals
fnv = ["seedable_hash/fnv"]

[dependencies]
bitm = { version="0.4", path="../bitm" }
dyn_size_of = { version="0.4", path="../dyn_size_of" }
binout = { version=">=0.2", path="../binout" }
rayon = "1.5"
seedable_hash = { version="0.1", path="../seedable_hash", default-features = false }

[target.'cfg(target_pointer_width = "32")'.dependencies]
aligned-vec = { version="0.6", optional=true }  #  for 32 bit support

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fmph"
harness = false