[package]
name = "seedable_hash"
version = "0.1.6"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The library for calculating seedable hashes and fast reduction of their ranges."
documentation = "https://docs.rs/seedable_hash"
repository = "https://github.com/beling/bsuccinct-rs"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = [ "algorithms", "data-structures", "science" ]
keywords = [ "hashing", "hash", "seed", "reduce", "map" ]

[features]
default = ["xxhash-rust"]
sip13 = []  # if enabled, makes available BuildSip13 that uses Sip13 from compiler internals

[dependencies]
wyhash = { version="0.5", optional=true }
fnv = { version="1", optional=true }
gxhash = { version = "3.4", optional = true }
rapidhash = { version = "1.3", optional = true, default-features = false }
xxhash-rust = { version = "0.8", features = ["xxh3"], optional=true }